enhance(update nav and hero section): update styles and content  of hero section

--- a/index.html
+++ b/index.html
@@ -98,19 +98,21 @@
 		</form>
 	</div>
 	
-</div>	<div class="jumbotron d-flex align-items-center">
+</div>
+<div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 mb-4">RO<br>XY</h1>
+    <h6 class="display-3 mb-4">Hey!<br>I'm Tracy Muso</h6>
+    <strong class="">I am a software developer who loves to build websites for my community.<br>Ready to maximize your online presence with an awesome website? Let's get in touch.</strong>
   </div>
-  <div class="rectangle-1"></div>
-  <div class="rectangle-2"></div>
-  <div class="rectangle-transparent-1"></div>
-  <div class="rectangle-transparent-2"></div>
-  <div class="circle-1"></div>
-  <div class="circle-2"></div>
-  <div class="circle-3"></div>
-  <div class="triangle triangle-1">
-  	<img src="img/obj_triangle.png" alt="">
+        <div class="rectangle-1"></div>
+        <div class="rectangle-2"></div>
+        <div class="rectangle-transparent-1"></div>
+        <div class="rectangle-transparent-2"></div>
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
+        <div class="triangle triangle-1">
+        <img src="img/obj_triangle.png" alt="">
   </div>
   <div class="triangle triangle-2">
   	<img src="img/obj_triangle.png" alt="">
@@ -128,7 +130,7 @@
             <!-- Section Title -->
             <div class="title-wrap mb-5" data-aos="fade-up">
                 <h2 class="section-title">
-                    A template built by <a href="https://gettemplates.co" target="_blank">GetTemplates.co</a>
+                    Benefits of hiring me</a>
                 </h2>
                 <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
             </div>
