enhance(hiring-benefits-section): update content of section that highlights benefits of hiring me

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
     <h6 class="display-3 mb-4">Hey!<br>I'm Tracy Muso</h6>
-    <strong class="">I am a software developer who loves to build websites for my community.<br>Ready to maximize your online presence with an awesome website? Let's get in touch.</strong>
+    <strong class="">I am a software developer who loves to build websites and Api's for my community.<br>Ready to maximize your online presence with an awesome website? Let's get in touch.</strong>
   </div>
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
@@ -132,7 +132,7 @@
                 <h2 class="section-title">
                     Benefits of hiring me</a>
                 </h2>
-                <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
+                <p class="section-sub-title">Here are a few reasons to hire me to build your websites and  API`S <br> </p>
             </div>
             <!-- End of Section Title -->
             <div class="row">
@@ -146,14 +146,14 @@
                                     <i class="lnr lnr-cog fs-40"></i>
                                 </div>
                                 <h4>Easy to Customize</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Easily maintainable and customizable sites</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-frame-contract fs-40"></i>
                                 </div>
                                 <h4>Pixel Perfect</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Very engaging and highly functional websites</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
@@ -164,14 +164,14 @@
                                     <i class="lnr lnr-bubble fs-40"></i>
                                 </div>
                                 <h4>Full Support</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Need to tweak your website a bit, hit me up</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-magic-wand fs-40"></i>
                                 </div>
                                 <h4>Clean Design</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Professionally and beautiful designs to fulfill your needs</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
@@ -182,14 +182,14 @@
                                     <i class="lnr lnr-clock fs-40"></i>
                                 </div>
                                 <h4>Ontime Project</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Delivering excellent quality work in good time</p>
                             </div>
                             <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
                                 <div class="my-4">
                                     <i class="lnr lnr-thumbs-up fs-40"></i>
                                 </div>
                                 <h4>Built with SASS</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                <p>Websites built for scalability and efficiency</p>
                             </div>
                         </div>
                         <!-- End of Feature Item -->
