--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 
 <head>
-    <!--
-     - Roxy: Bootstrap template by GettTemplates.com
-     - https://gettemplates.co/roxy
-    -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tracy Muso</title>
@@ -32,6 +28,7 @@
 
 </head>
 <body data-spy="scroll" data-target="#navbar" class="static-layout">
+    <!-- Header -->
 	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
@@ -68,7 +65,7 @@
         </div>
     </div>
 </nav>
-
+<!-- Sidebar -->
 <div id="side-nav" class="sidenav">
 	<a href="javascript:void(0)" id="side-nav-close">&times;</a>
 	
@@ -99,6 +96,7 @@
 	</div>
 	
 </div>
+<!-- Hero Section -->
 <div class="jumbotron d-flex align-items-center">
   <div class="container text-center">
     <h6 class="display-3 mb-4">Hey!<br>I'm Tracy Muso</h6>
@@ -123,7 +121,7 @@
   <div class="triangle triangle-4">
   	<img src="img/obj_triangle.png" alt="">
   </div>
-</div>	<!-- Features Section-->
+</div>	<!-- Benefits of Hiring Section-->
 <section id="features" class="bg-white">
     <div class="container">
         <div class="section-content">
@@ -201,7 +199,7 @@
     </div>
 </section>
 <!-- End of Features Section-->	<section id="section-featurettes" class="featurettes overlay bg-fixed" style="background-image: url(img/bg.jpg);">
-
+<!-- Top Projects -->
     <div class="container">
         <div class="section-content">
             <div class="row">
@@ -315,7 +313,8 @@
         </div>
     </div>
 </section>
-<!-- End of Testimonial Section-->	<!-- Portfolio Section -->
+<!-- End of Testimonial Section-->
+<!-- Portfolio Section -->
 <section id="portfolio" class="bg-white">
     <div class="container">
         <div class="section-content">
@@ -474,7 +473,8 @@
         </div>
     </div>
 </section>
-<!-- End of Portfolio Section -->	<!-- Client Section -->
+<!-- End of Portfolio Section -->
+<!-- Client Section -->
 <section id="client" class="overlay bg-fixed" style="background-image: url(img/bg.jpg);">
     <div class="container">
         <div class="section-content" data-aos="fade-up">
@@ -513,7 +513,8 @@
             </div>
         </div>
 </section>
-<!-- End of Client Section -->	<!-- Reservation Section -->
+<!-- End of Client Section -->
+<!-- Reservation Section -->
 <section id="reservation" class="bg-white section-content">
     <div class="container">
         <div class="row align-items-center">
@@ -578,7 +579,8 @@
         
     </div>
 </section>
-<!-- End of Reservation Section -->	<!-- Features Section-->
+<!-- End of Reservation Section -->
+<!-- Features Section-->
 <section id="cta" class="bg-fixed overlay" style="background-image: url(img/bg.jpg);">
     <div class="container">
         <div class="section-content" data-aos="fade-up">
@@ -593,6 +595,7 @@
     </div>
 </section>
 <!-- End of Features Section--></div>
+<!-- Footer -->
 <footer class="mastfoot my-3">
     <div class="inner container">
          <div class="row">
