--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Work+Sans:300,400,700" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -205,15 +205,28 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="row align-items-center text-white">
-
                         <div class="col-md-4 offset-md-2 col-sm-6" data-aos="fade-right">
-                            <h4 class="mb-4">Capture every moments and share it to all your friends</h4>
-                            <p>Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet.</p>
-                            <button type="button" class="btn btn-outline-primary">FEATURES</button>
+                            <strong>Featured project:</strong>
+                            <h4 class="mb-4">Ronin Finance</h4>
+                            <p>This is a website that fetches data from the coingecko API. A user can check out the current details of various cryptocurrencies</p>
+                            <div class="progress mb-3">
+                                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Javascript 85%</div>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">CSS3 85%</div>
+                            </div>
+                            <div class="my-2 p-2 flex">
+                                <a href="ronin-finance.netlify.app">
+                                    <i class="fa fa-chain" style="font-size:24px; color:#ff00cc; padding: 5px;"></i>
+                                </a>
+                                <a href="https://github.com/TracyMuso/Ronin-Finance">
+                                    <i class="fab fa-github" style="font-size:24px; color:#ff00cc;"></i>
+                                </a>
+                            </div>
                         </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
 
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="flip-right">
-                            <img class="my-5" src="img/app-profile-mockup.png" alt="">
+                            <img class="my-5" src="https://github.com/TracyMuso/Ronin-Finance/blob/dev/assets/roninUI.png?raw=true" alt="project ui">
                         </div><!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
 
                     </div><!--/ .featurettes-item -->
@@ -225,25 +238,32 @@
     </div><!--/ .container -->
 
 </section>	<section id="section-featurettes" class="featurettes">
-
     <div class="container">
         <div class="section-content">
             <div class="row">
                 <div class="col-md-12">
                     <div class="row align-items-center">
-
                         <div class="col-md-4 offset-md-2 col-sm-6" data-aos="flip-left">
-                            <img class="my-5" src="img/app-profile-mockup.png" alt="">
+                            <img class="my-5" src="https://github.com/TracyMuso/space-travelers-hub-online/blob/development/src/components/assets/readme.png?raw=true" alt="project ui">
                         </div><!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
 
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
-                            <h4 class="mb-4">Capture every moments and share it to all your friends</h4>
-                            <p>Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet.</p>
+                            <strong>Featured project:</strong>
+                            <h4 class="mb-4"> Space travellers hub</h4>
+                            <p>This is a website that fetches data from the spaceX API. A user can check out the history of dpaceX rocket launches and "reserve" rockets for a space trip.</p>
                             <div class="progress mb-3">
-                                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">HTML5 95%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Javascript 85%</div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">CSS3 90%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">CSS3 85%</div>
+                            </div>
+                            <div class="my-2 p-2 flex">
+                                <a href="space-uber.netlify.app">
+                                    <i class="fa fa-chain" style="font-size:24px; color:#ff00cc; padding: 5px;"></i>
+                                </a>
+                                <a href="https://github.com/TracyMuso/space-travelers-hub-online">
+                                    <i class="fab fa-github" style="font-size:24px; color:#ff00cc;"></i>
+                                </a>
                             </div>
                         </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
 
@@ -269,7 +289,7 @@
                 <div class="testi-content testi-carousel owl-carousel">
                     <div class="testi-item text-center">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                        <h4 class="testi-text"><b>ROXY</b> is best theme i used so far.<br> It’s ideal for guys without coding knowledge like me!</h4>
+                        <h4 class="testi-text"><b>ROXY</b> is best theme i used so far.<br> It`s ideal for guys without coding knowledge like me!</h4>
                         <div class="testi-meta-inner d-flex justify-content-center align-items-center">
                             <div class="testi-img mr-2">
                                 <img src="img/testi-1.jpg" alt="">
