enhance(top-projects-section): update content and and styles of noteworthy projects section

--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
 </section>
 <!-- End of Testimonial Section-->
 <!-- Portfolio Section -->
-<section id="portfolio" class="bg-white">
+<section id="portfolio" class="bg-[##ff00cc]">
     <div class="container">
         <div class="section-content">
             <!-- Section Title -->
             <div class="title-wrap">
                 <h2 class="section-title">Our <b>Awesome</b> Works</h2>
-                <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
+                <p class="section-sub-title">Checkout some other noteworthy projects of mine. <br> Some are still in progress.</p>
             </div>
             <!-- End of Section Title -->
             <div class="row">
@@ -350,9 +350,9 @@
                     <!-- Btn Filter -->
                     <div class="filter-button-group btn-filter d-flex justify-content-center">
                         <a tabindex="0" class="is-checked" data-filter="*">Show All</a>
-                        <a tabindex="0" data-filter=".minimalism">Minimalism</a>
-                        <a tabindex="0" data-filter=".vintage">Vintage</a>
-                        <a tabindex="0" data-filter=".creative">Creative</a>
+                        <a tabindex="0" data-filter=".minimalism">Fullstack apps</a>
+                        <a tabindex="0" data-filter=".vintage">Front end apps</a>
+                        <a tabindex="0" data-filter=".creative">API`s</a>
                     </div>
                     <!-- End of Btn Filter -->
                     <!-- Portfolio Content -->
@@ -365,15 +365,16 @@
                                 <img src="img/photo-1.jpg" alt="portfolio-img" class="portfolio-item">
                                 <div class="grid-info">
                                     <div class="grid-link d-flex justify-content-center">
-                                        <a class="img-pop" data-rel="lightcase" href="img/photo-1.jpg" title="Photo-1">
+                                        <a class="img-pop" data-rel="lightcase" href="img/photo-1.jpg" title="Source code">
                                             <span class="lnr lnr-move"></span>
                                         </a>
-                                        <a class="ext-link" href="https://unsplash.com/" target="_blank">
+                                        <a class="ext-link" href="https://unsplash.com/" target="_blank" title="live demo">
                                             <span class="lnr lnr-link"></span>
                                         </a>
                                     </div>
                                     <div class="grid-title">
                                         <h4>Camera</h4>
+                                        <p>This is a great project</p>
                                     </div>
                                 </div>
 
