--- a/index.html
+++ b/index.html
@@ -549,18 +549,23 @@
                     <form method="post" name="contact-us" action="">
                         <div class="row">
                             <div class="col-md-12 form-group">
+                                <span class="text-danger">*required</span>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
                             </div>
                             <div class="col-md-12 form-group">
+                                <span class="text-danger">*required</span>
                                 <input type="text" class="form-control" id="email" name="email" placeholder="Email">
                             </div>
                             <div class="col-md-12 form-group">
+                                <span>Optional</span>
                                 <input type="number" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Phone">
                             </div>
                             <div class="col-md-12 form-group">
+                                <span>Optional</span>
                                 <input type="text" class="form-control" id="websiteUrl" name="websiteUrl" placeholder="Website">
                             </div>
                             <div class="col-md-12 form-group">
+                                <span class="text-danger">*required</span>
                                 <textarea class="form-control" id="message" name="message" rows="6" placeholder="Your Message ..."></textarea>
                             </div>
                             <div class="col-md-12 text-center">
