--- a/index.html
+++ b/index.html
@@ -576,30 +576,34 @@
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1" data-aos="fade-left">
-                <h2 class="mb-4">
-                    Best solution to create any website. Pay once.
-                </h2>
-                <p class="mb-4">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-
-                <ul class="list-inline py-2">
-                    <li class="list-inline-item text-center">
-                        <span class="lnr fs-40 lnr-rocket"></span>
-                        <p>Fast delivery</p>
-                    </li>
-                    <li class="list-inline-item text-center">
-                        <span class="lnr fs-40 lnr-magic-wand"></span>
-                        <p>Awesome design</p>
-                    </li>
-                    <li class="list-inline-item text-center">
-                        <span class="lnr fs-40 lnr-cog"></span>
-                        <p>Easy to customize</p>
-                    </li>
-                </ul>
-
-                <a href="#" class="btn btn-link p-0">
-                    <span>PURCHASE NOW</span>
-                    <span class="lnr lnr-arrow-right"></span>
-                </a>
+                <div class="section-content pt-0">
+                    <div class="title-wrap" data-aos="fade-up">
+                        <h2 class="section-title">Where To Find Us?</h2>
+                    </div>
+                    <div class="row text-center mt-4">
+                        <div class="col" data-aos="fade-up">
+                            <span class="lnr lnr-location fs-40 py-4 d-block"></span>
+                            <h5>LOCATION</h5>
+                            <p>Remote</p>
+                        </div>
+                        <div class="col" data-aos="fade-up" data-aos-delay="200">
+                            <span class="lnr lnr-clock fs-40 py-4 d-block"></span>
+                            <h5>WORKING TIME</h5>
+                            <p>Monday - Saturday<br>8am - 7pm</p>
+                        </div>
+                        <div class="w-100 d-none d-md-block"></div>
+                        <div class="col" data-aos="fade-up" data-aos-delay="400">
+                            <span class="lnr lnr-phone fs-40 py-4 d-block"></span>
+                            <h5>CALL US</h5>
+                            <p>123-45678</p>
+                        </div>
+                        <div class="col" data-aos="fade-up" data-aos-delay="600">
+                            <span class="lnr lnr-phone fs-40 py-4 d-block"></span>
+                            <h5>EMAIL</h5>
+                            <p>contact@tracymuso.com</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         
