--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="blog.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="#reservation">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a id="side-search-open" class="nav-link" href="#">
