--- a/index.html
+++ b/index.html
@@ -121,7 +121,90 @@
   <div class="triangle triangle-4">
   	<img src="img/obj_triangle.png" alt="">
   </div>
-</div>	<!-- Benefits of Hiring Section-->
+</div>
+<!-- About me section -->
+<section id="who-we-are" class="bg-white">
+    <div class="container">
+        <div class="section-content">
+            <div class="title-wrap" data-aos="fade-up">
+                <h2 class="section-title">About me</h2>
+            </div>
+            <div data-aos="fade-up" class="w-75 text-center mx-auto py-5">
+               <p class="py-6 px-4">
+                I have always enjoyed working with modern websites, applications and other technologies. One calm day in 2021, I decided to learn how to build them myself and I've been building since then. My major interests are in fintech, social media and ecommerce. So far I have built many applications and Api's, including this very website. Yeah, I build portfolio websites too :)
+               </p>
+               <div>
+                <div>
+                    <strong class="my-2 py-4">Here are a few technologies that I work with</strong>
+                    <div class="row mx-auto w-50 py-6">
+                        <ul class="text-start mr-auto">
+                            <li>
+                                Javascript
+                            </li>
+                            <li>
+                                Typescript
+                            </li>
+                            <li>
+                                Ruby
+                            </li>
+                            <li>Tailwindcss</li>
+                            <li>SQL</li>
+                        </ul>
+                        <ul class="text-start ml-auto">
+                            <li>Nodejs</li>
+                            <li>Nextjs</li>
+                            <li>React</li>
+                            <li>Ruby on rails</li>
+                        </ul>
+                    </div>     
+                </div>
+            </div>
+            <div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4 col-sm-6" data-aos="fade-up">
+                    <img class="rounded-circle" src="img/icons/animat-checkmark.gif" alt="Generic placeholder image" width="140" height="140">
+                    <h5 class="mb-4">Simple and Clean</h5>
+                    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                </div>
+                <!-- /.col-md-4 col-sm-6  -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                    <img class="rounded-circle" src="img/icons/animat-customize.gif" alt="Generic placeholder image" width="140" height="140">
+                    <h5 class="mb-4">Easy to Customize</h5>
+                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Vestibulum id ligula porta felis.</p>
+                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                </div>
+                <!-- /.col-md-4 col-sm-6  -->
+                <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                    <img class="rounded-circle" src="img/icons/animat-responsive.gif" alt="Generic placeholder image" width="140" height="140">
+                    <h5 class="mb-4">Fully Responsive</h5>
+                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
+                    <p><a class="btn btn-link" href="#" role="button">View details</a></p>
+                </div>
+                <!-- /.col-md-4 col-sm-6  -->
+            </div>
+            <!-- /.row -->
+        </div>
+    </div>
+</section>
+	<!-- Features Section-->
+<section id="cta" class="bg-fixed overlay" style="background-image: url(img/bg.jpg);">
+    <div class="container">
+        <div class="section-content" data-aos="fade-up">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2 class="mb-2">Make a beautiful website, or million of them</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, veritatis qui eligendi delectus quia fuga!</p>
+                    <a class="btn btn-outline-primary btn-lg">FEATURES</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End of About me section -->
+
+<!-- Benefits of Hiring Section-->
 <section id="features" class="bg-white">
     <div class="container">
         <div class="section-content">
