--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="#who-we-are">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Projects</a>
